--- a/public/views/design_sketch.html
+++ b/public/views/design_sketch.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Hardfork Demo of Decred Cryptocurrency">
     <meta name="author" content="Decred Developer">
     <link rel="icon" href="favicon.ico">
-    <title>Hardfork Demo</title>
+    <title>Decred Testnet Faucet</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
     <!--  Custom favicon  -->
@@ -55,29 +55,40 @@
       <h1>Decred Testnet Faucet</h1>
       <!-- INTRODUCTION TEXT -->
       <div class="row">
+
         <div class="col-md-6">
           <p>
             Please enter your Testnet Decred address and press send.  There is a 10min timeout per IP to avoid draining of the wallet.  For now each request will send 100 DCR.
           </p>
+	  <p>
+	    <a href="https://hardforkdemo.decred.org" target="_blank" class="btn-sm btn-info">&rarr; Visit the Hardfork Monitor</a>
+	  </p>
         </div>
-        <!-- OVERALL STATISTICS -->
-        <div class="col-md-6">
-          <form action="/requestfaucet" method="post">
-            <input style="color:black" type="text" name="address" placeholder="Address">
-            <input style="color:black" type="submit" value="Send">
-          </form>
+
+	 <div class="col-md-6">
+	<!-- ERROR / SUCCESS OUTPUT -->
           {{if .Error}}
-          <div style="color:red">
+          <div class="alert alert-danger">
             {{.Error}}
           </div>
           {{end}}
           {{if .Success}}
-          <div style="color:green">
+          <div class="alert alert-success">
             {{.Success}}
           </div>
           {{end}}
-        </div>
-      </div>
+	<!-- FORM BEGINS HERE -->
+          <form action="/requestfaucet" class="form-horizontal" method="post">
+	  <div class="form-group">
+            <input class="form-control input-md" type="text" name="address" placeholder="Address" required>
+	  </div>
+	  <div class="form-group">
+            <button class="btn btn-primary" type="submit">Send</button>
+	  </div>
+          </form>
+        </div><!-- /col-md-6-->
+
+      </div><!-- /row -->
     </div> <!-- /container -->
   </body>
 </html>
