--- a/public/views/design_sketch.html
+++ b/public/views/design_sketch.html
@@ -90,7 +90,7 @@
       </div><!-- /row -->
       <div class="row">
         <div class="col-md-12">
-          <p>Please send any unused Testnet coins back to the faucet wallet: TsUbDcvcT2GeSYUPdEdiEgPqay2XFUdsS6A</p>
+          <p class="text-center">Please send any unused Testnet coins back to the faucet wallet: TsUbDcvcT2GeSYUPdEdiEgPqay2XFUdsS6A</p>
         </div>
       </div>
     </div> <!-- /container -->
