--- a/public/views/design_sketch.html
+++ b/public/views/design_sketch.html
@@ -60,13 +60,13 @@
           <p>
             Please enter your Testnet Decred address and press send.  There is a 10min timeout per IP to avoid draining of the wallet.  For now each request will send 100 DCR.
           </p>
-	  <p>
-	    <a href="https://hardforkdemo.decred.org" target="_blank" class="btn-sm btn-info">&rarr; Visit the Hardfork Monitor</a>
-	  </p>
+	        <p>
+	          <a href="https://hardforkdemo.decred.org" target="_blank" class="btn-sm btn-info">&rarr; Visit the Hardfork Monitor</a>
+	        </p>
         </div>
 
-	 <div class="col-md-6">
-	<!-- ERROR / SUCCESS OUTPUT -->
+	      <div class="col-md-6">
+        	<!-- ERROR / SUCCESS OUTPUT -->
           {{if .Error}}
           <div class="alert alert-danger">
             {{.Error}}
@@ -77,18 +77,22 @@
             {{.Success}}
           </div>
           {{end}}
-	<!-- FORM BEGINS HERE -->
+	        <!-- FORM BEGINS HERE -->
           <form action="/requestfaucet" class="form-horizontal" method="post">
-	  <div class="form-group">
-            <input class="form-control input-md" type="text" name="address" placeholder="Address" required>
-	  </div>
-	  <div class="form-group">
-            <button class="btn btn-primary" type="submit">Send</button>
-	  </div>
+	          <div class="form-group">
+              <input class="form-control input-md" type="text" name="address" placeholder="Address" required>
+	          </div>
+	          <div class="form-group">
+              <button class="btn btn-primary" type="submit">Send</button>
+	          </div>
           </form>
         </div><!-- /col-md-6-->
-
       </div><!-- /row -->
+      <div class="row">
+        <div class="col-md-12">
+          <p class="text-center">Please send any unused Testnet coins back to the faucet wallet: TsUbDcvcT2GeSYUPdEdiEgPqay2XFUdsS6A</p>
+        </div>
+      </div>
     </div> <!-- /container -->
   </body>
 </html>
