Add link to testnet.decred.org for successful tx

--- a/public/views/design_sketch.html
+++ b/public/views/design_sketch.html
@@ -74,7 +74,7 @@
           {{end}}
           {{if .Success}}
           <div class="alert alert-success">
-            {{.Success}}
+            <p>Success! See the tx status: <a href="https://testnet.decred.org/tx/{{.Success}}">{{.Success}}</a></p>
           </div>
           {{end}}
 	        <!-- FORM BEGINS HERE -->
