Fix favicon.ico link

--- a/public/views/design_sketch.html
+++ b/public/views/design_sketch.html
@@ -9,7 +9,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Hardfork Demo of Decred Cryptocurrency">
     <meta name="author" content="Decred Developer">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="./images/favicon/favicon.ico">
     <title>Decred Testnet Faucet</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
