--- a/public/views/design_sketch.html
+++ b/public/views/design_sketch.html
@@ -9,17 +9,17 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Hardfork Demo of Decred Cryptocurrency">
     <meta name="author" content="Decred Developer">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="./images/favicon/favicon.ico">
     <title>Decred Testnet Faucet</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
     <!--  Custom favicon  -->
-    <link rel="apple-touch-icon" sizes="180x180" href="./content/images/favicon/apple-touch-icon.png?v=fi5jKKtbwv">
-    <link rel="icon" type="image/png" href="./content/images/favicon/favicon-32x32.png?v=fi5jKKtbwv" sizes="32x32">
-    <link rel="icon" type="image/png" href="./content/images/favicon/favicon-16x16.png?v=fi5jKKtbwv" sizes="16x16">
-    <link rel="manifest" href="./content/images/favicon/manifest.json?v=fi5jKKtbwv">
-    <link rel="mask-icon" href="./content/images/favicon/safari-pinned-tab.svg?v=fi5jKKtbwv" color="#2973ff">
-    <link rel="shortcut icon" href="./content/images/favicon/favicon.ico?v=fi5jKKtbwv">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png?v=fi5jKKtbwv">
+    <link rel="icon" type="image/png" href="./images/favicon/favicon-32x32.png?v=fi5jKKtbwv" sizes="32x32">
+    <link rel="icon" type="image/png" href="./images/favicon/favicon-16x16.png?v=fi5jKKtbwv" sizes="16x16">
+    <link rel="manifest" href="./images/favicon/manifest.json?v=fi5jKKtbwv">
+    <link rel="mask-icon" href="./images/favicon/safari-pinned-tab.svg?v=fi5jKKtbwv" color="#2973ff">
+    <link rel="shortcut icon" href="./images/favicon/favicon.ico?v=fi5jKKtbwv">
     <meta name="apple-mobile-web-app-title" content="deCRED - decentralised credit">
     <meta name="application-name" content="deCRED - decentralised credit">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
