--- a/public/views/design_sketch.html
+++ b/public/views/design_sketch.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Hardfork Demo of Decred Cryptocurrency">
+    <meta name="description" content="Testnet Faucet for Decred">
     <meta name="author" content="Decred Developer">
     <link rel="icon" href="./images/favicon/favicon.ico">
     <title>Decred Testnet Faucet</title>
@@ -20,8 +20,8 @@
     <link rel="manifest" href="./images/favicon/manifest.json?v=fi5jKKtbwv">
     <link rel="mask-icon" href="./images/favicon/safari-pinned-tab.svg?v=fi5jKKtbwv" color="#2973ff">
     <link rel="shortcut icon" href="./images/favicon/favicon.ico?v=fi5jKKtbwv">
-    <meta name="apple-mobile-web-app-title" content="deCRED - decentralised credit">
-    <meta name="application-name" content="deCRED - decentralised credit">
+    <meta name="apple-mobile-web-app-title" content="deCRED - decentralized credit">
+    <meta name="application-name" content="deCRED - decentralized credit">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
