--- a/public/views/design_sketch.html
+++ b/public/views/design_sketch.html
@@ -58,7 +58,7 @@
 
         <div class="col-md-6">
           <p>
-            Please enter your Testnet Decred address and press send.  There is a {{.Limit}} second timeout per IP to avoid draining of the wallet.  For now each request will send {{.Amount}} DCR.
+            Welcome to the Decred Testnet Faucet. The faucet will send {{.Amount}} DCR every {{.Limit}} seconds.  If you need more than this, please contact ay-p, davecgh, dhill, jolan, or jrick through one of the communication methods listed on the <a href="https://decred.org/">Decred website</a>.
           </p>
 	        <p>
 	          <a href="https://hardforkdemo.decred.org" target="_blank" class="btn-sm btn-info">&rarr; Visit the Hardfork Monitor</a>
@@ -81,7 +81,8 @@
           <form action="/requestfaucet" class="form-horizontal" method="post">
 	          <div class="form-group">
               <input class="form-control input-md" type="text" name="address" placeholder="Address" required>
-              <input type="hidden" name="overrideToken" value="">
+              <input type="hidden" name="amount" value="">
+              <input type="hidden" name="overridetoken" value="">
 	          </div>
 	          <div class="form-group">
               <button class="btn btn-primary" type="submit">Send</button>
