--- a/public/views/design_sketch.html
+++ b/public/views/design_sketch.html
@@ -92,8 +92,10 @@
       </div><!-- /row -->
       <div class="row">
         <div class="col-md-12">
-          <p class="text-center">Please send any unused Testnet coins back to the faucet wallet: {{.Address}}</p>
-          <p class="text-center">Balance left in default account: {{.Balance}}</p>
+          <p class="text-center">Please send any unused Testnet coins back to the faucet wallet: {{.Address}}<br>
+          Balance left in default account: {{.Balance}} DCR<br>
+          Have sent {{.SentToday}} DCR today. Daily limit {{.DailyLimit}} DCR.<br>
+          The source code is available on <a href="https://github.com/decred/testnetfaucet">GitHub</a>.</p>
         </div>
       </div>
     </div> <!-- /container -->
