--- a/public/views/design_sketch.html
+++ b/public/views/design_sketch.html
@@ -81,8 +81,8 @@
           <form action="/requestfaucet" class="form-horizontal" method="post">
 	          <div class="form-group">
               <input class="form-control input-md" type="text" name="address" placeholder="Address" required>
-              <input type="hidden" name="amount" value="">
-              <input type="hidden" name="overridetoken" value="">
+              <input type="hidden" name="amount">
+              <input type="hidden" name="overridetoken">
 	          </div>
 	          <div class="form-group">
               <button class="btn btn-primary" type="submit">Send</button>
