--- a/public/views/design_sketch.html
+++ b/public/views/design_sketch.html
@@ -20,8 +20,8 @@
     <link rel="manifest" href="./images/favicon/manifest.json?v=fi5jKKtbwv">
     <link rel="mask-icon" href="./images/favicon/safari-pinned-tab.svg?v=fi5jKKtbwv" color="#2973ff">
     <link rel="shortcut icon" href="./images/favicon/favicon.ico?v=fi5jKKtbwv">
-    <meta name="apple-mobile-web-app-title" content="deCRED - decentralized credit">
-    <meta name="application-name" content="deCRED - decentralized credit">
+    <meta name="apple-mobile-web-app-title" content="Decred - decentralized credits">
+    <meta name="application-name" content="Decred - decentralized credits">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
