--- a/public/views/design_sketch.html
+++ b/public/views/design_sketch.html
@@ -58,9 +58,15 @@
 
         <div class="col-md-6">
           <p>
-            Welcome to the Decred Testnet Faucet. The faucet will send {{.Amount}} DCR every {{.Limit}} seconds.  If you need more than this, please contact ay-p, davecgh, dhill, jolan, or jrick through one of the communication methods listed on the <a href="https://decred.org/">Decred website</a>.
+            This faucet will send {{.Amount}} DCR to any valid testnet address.
+            You may only use it every {{.TimeLimit}} seconds. If you need more DCR than
+            this, please contact ay-p, davecgh, dhill, jolan, or jrick through
+            one of the communication methods listed on the <a href="https://decred.org/">Decred website</a>.
           </p>
-	        <p>
+          <p>
+            Note: Please send any unused Testnet coins back to the faucet wallet: {{.Address}}
+          </p>
+	        <p style="padding-top: 16px">
 	          <a href="https://hardforkdemo.decred.org" target="_blank" class="btn-sm btn-info">&rarr; Visit the Hardfork Monitor</a>
 	        </p>
         </div>
@@ -92,10 +98,16 @@
       </div><!-- /row -->
       <div class="row">
         <div class="col-md-12">
-          <p class="text-center">Please send any unused Testnet coins back to the faucet wallet: {{.Address}}<br>
-          Balance left in default account: {{.Balance}} DCR<br>
-          Have sent {{.SentToday}} DCR today. Daily limit {{.DailyLimit}} DCR.<br>
-          The source code is available on <a href="https://github.com/decred/testnetfaucet">GitHub</a>.</p>
+          <div class="text-center">
+            <div>Balance left in default account: {{.Balance}} DCR</div>
+            <div>
+              <span>Sent today: {{.SentToday}} DCR</span>
+              <span style="margin: 0 4px">·</span>
+              <span>Transaction limit: {{.TransactionLimit}} DCR</span>
+            </div>
+            <div>
+              The source code for this faucet is available on <a href="https://github.com/decred/testnetfaucet">GitHub</a>.
+            </div>
         </div>
       </div>
     </div> <!-- /container -->
