--- a/public/views/design_sketch.html
+++ b/public/views/design_sketch.html
@@ -59,16 +59,11 @@
         <div class="col-md-6">
           <p>
             This faucet will send {{.Amount}} DCR to any valid testnet address.
-            You may only use it every {{.TimeLimit}} seconds. If you need more DCR than
-            this, please contact ay-p, davecgh, dhill, jolan, or jrick through
-            one of the communication methods listed on the <a href="https://decred.org/">Decred website</a>.
+            You may only use it every {{.TimeLimit}} seconds.
           </p>
           <p>
             Note: Please send any unused Testnet coins back to the faucet wallet: {{.Address}}
           </p>
-	        <p style="padding-top: 16px">
-	          <a href="https://hardforkdemo.decred.org" target="_blank" class="btn-sm btn-info">&rarr; Visit the Hardfork Monitor</a>
-	        </p>
         </div>
 
 	      <div class="col-md-6">
