dcrdata in lower case.

--- a/public/views/design_sketch.html
+++ b/public/views/design_sketch.html
@@ -75,7 +75,7 @@
           {{end}}
           {{if .Success}}
           <div class="alert alert-success">
-            <p>Success! Transaction {{.Success}} has been sent.  You may see it on <a href="https://testnet.dcrdata.org/explorer/tx/{{.Success}}">DCRData</a> or <a href="https://testnet.decred.org/tx/{{.Success}}">Insight</a>.</p>
+            <p>Success! Transaction {{.Success}} has been sent.  You may see it on <a href="https://testnet.dcrdata.org/explorer/tx/{{.Success}}">dcrdata</a> or <a href="https://testnet.decred.org/tx/{{.Success}}">Insight</a>.</p>
           </div>
           {{end}}
 	        <!-- FORM BEGINS HERE -->
