--- a/public/views/design_sketch.html
+++ b/public/views/design_sketch.html
@@ -73,7 +73,7 @@
           </div>
           {{end}}
 	        <!-- FORM BEGINS HERE -->
-          <form action="/requestfaucet" class="form-horizontal" method="post">
+          <form class="form-horizontal" method="post">
 	          <div class="form-group">
               <input class="form-control input-md" type="text" name="address" placeholder="Address" required>
               <input type="hidden" name="amount">
