--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,17 +1,3 @@
-/* inconsolata-regular - latin */
-@font-face {
-  font-family: 'Inconsolata';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/inconsolata-v15-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local('Inconsolata Regular'), local('Inconsolata-Regular'),
-       url('../fonts/inconsolata-v15-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/inconsolata-v15-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/inconsolata-v15-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/inconsolata-v15-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/inconsolata-v15-latin-regular.svg#Inconsolata') format('svg'); /* Legacy iOS */
-}
-
 /* source-sans-pro-regular - latin */
 @font-face {
   font-family: 'Source Sans Pro';
@@ -26,13 +12,12 @@
        url('../fonts/source-sans-pro-v9-latin-regular.svg#SourceSansPro') format('svg'); /* Legacy iOS */
 }
 
-
 h4 {
-   width: 100%; 
-   text-align: center; 
-   border-bottom: 1px solid #FFF; 
-   line-height: 0.1em;
-   margin: 10px 0 20px; 
+    width: 100%; 
+    text-align: center; 
+    border-bottom: 1px solid #FFF; 
+    line-height: 0.1em;
+    margin: 10px 0 20px; 
 } 
 
 h4 span { 
@@ -41,34 +26,19 @@ h4 span {
 }
 
 body {
-	padding-top: 70px;
+    font-size: 14px;
 	background-color: #132f4b;
 	font-family: 'Source Sans Pro', sans-serif;
 	color: #FFFFFF;
 }
 .svg-logo{
-        width: 186px;
-        height: 34px;
+    width: 186px;
+    height: 34px;
 }
 
 .navbar-default {
     background-color: #0C1E3E;
-    border: none;
-    border-radius: 0;
-    margin: auto;
-    width: 100%;
-    max-width: 100%;
-height: 70px;
-}
-
-.navbar-nav li a:link{
-	color: #ffffff;
-	line-height: 63px;
-	padding: 10px 27px;
-}
-
-.navbar-nav a:hover{
-	color: #2ed7a2;
+    height: 70px;
 }
 
 .btn-primary{
@@ -78,22 +48,10 @@ height: 70px;
 	background: -moz-linear-gradient(#699bff, #2972ff);
 	background: linear-gradient(#699bff, #2972ff);
 	padding: 16px 28px;
-	font-size: 1.73rem;
 	border: 0;
 }
 
 .btn-primary a:link{
 	color: #fff;
-	font-size: 1.73rem;
 	text-decoration: none;
-	}
-
-
-footer {
-    background-color: #0C1E3E;
-    position: absolute;
-    bottom: 0;
-    width: 1705px;
-    max-width: 100%;
-    padding: 11px 13px;
 }
