fix race (simplify code and remove duplication)

--- a/public/views/design_sketch.html
+++ b/public/views/design_sketch.html
@@ -52,7 +52,7 @@
 
         <div class="col-md-6">
           <p>
-            This faucet will send {{.Amount}} DCR to any valid testnet address.
+            This faucet will send {{.Amount}} to any valid testnet address.
             You may only use it every {{.TimeLimit}} seconds.
           </p>
           <p>
@@ -88,11 +88,11 @@
       <div class="row">
         <div class="col-md-12">
           <div class="text-center">
-            <div>Balance left in default account: {{.Balance}} DCR</div>
+            <div>Balance left in default account: {{.Balance}}</div>
             <div>
-              <span>Sent today: {{.SentToday}} DCR</span>
+              <span>Sent today: {{.SentToday}}</span>
               <span style="margin: 0 4px">·</span>
-              <span>Transaction limit: {{.TransactionLimit}} DCR</span>
+              <span>Transaction limit: {{.TransactionLimit}}</span>
             </div>
             <div>
               The source code for this faucet is available on <a href="https://github.com/decred/testnetfaucet">GitHub</a>.
